--- a/symfony_fw/templates/render/control_panel/page_creation.html.twig
+++ b/symfony_fw/templates/render/control_panel/page_creation.html.twig
@@ -23,7 +23,7 @@
         {{form_row(form.menuName, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "menu"})}}
         
         <div id="page_rankMenuSort" class="sort_container">
-            <p>{% trans %}pageCreation_3{% endtrans %} <i class="material-icons">list</i></p>
+            <p>{% trans %}pageCreation_3{% endtrans %} <i class="material-icons" style="vertical-align: middle; margin-bottom: 2px;">list</i></p>
             <div class="sort_result">
                 {{response.values.pageSortListHtml|raw}}
             </div>
