--- a/symfony_fw/public/css/system/utility.css
+++ b/symfony_fw/public/css/system/utility.css
@@ -13,4 +13,17 @@
 
 .clearfix::after { content: ""; clear: both; }
 
+.material-icons.md-14 { font-size: 14px; }
+
+.material-icons.primary { color: #1976d2; }
+
+.material-icons.secondary { color: #d50000; }
+
+/* Rules for using icons as black on a light background. 
+.material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
+.material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }*/
+/* Rules for using icons as white on a dark background.
+.material-icons.md-light { color: rgba(255, 255, 255, 1); }
+.material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }*/
+
 /*# sourceMappingURL=utility.css.map */
