--- a/symfony_fw/templates/render/control_panel/page_profile.html.twig
+++ b/symfony_fw/templates/render/control_panel/page_profile.html.twig
@@ -5,11 +5,11 @@
 
     {{-render(controller("App\\Controller\\LanguageController::pageAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
 
-    <div>
-        <p><i class="fa fa-paw"></i> <b>{% trans %}pageProfile_2{% endtrans %}</b>{{response.values.userCreation}}</p>
-        <p><i class="fa fa-calendar"></i> <b>{% trans %}pageProfile_3{% endtrans %}</b>{{response.values.dateCreation[0]}} [{{response.values.dateCreation[1]}}]</p>
-        <p><i class="fa fa-paw"></i> <b>{% trans %}pageProfile_4{% endtrans %}</b>{{response.values.userModification}}</p>
-        <p><i class="fa fa-calendar"></i> <b>{% trans %}pageProfile_5{% endtrans %}</b>{{response.values.dateModification[0]}} [{{response.values.dateModification[1]}}]</p>
+    <div class="mdc-typography--caption page_detail">
+        <p><i class="material-icons md-14">pets</i> <span class="mdc-theme--on-surface">{% trans %}pageProfile_2{% endtrans %}</span>{{response.values.userCreation}}</p>
+        <p><i class="material-icons md-14">calendar_today</i> <span class="mdc-theme--on-surface">{% trans %}pageProfile_3{% endtrans %}</span>{{response.values.dateCreation[0]}} [{{response.values.dateCreation[1]}}]</p>
+        <p><i class="material-icons md-14">pets</i> <span class="mdc-theme--on-surface">{% trans %}pageProfile_4{% endtrans %}</span>{{response.values.userModification}}</p>
+        <p><i class="material-icons md-14">calendar_today</i> <span class="mdc-theme--on-surface">{% trans %}pageProfile_5{% endtrans %}</span>{{response.values.dateModification[0]}} [{{response.values.dateModification[1]}}]</p>
     </div>
 
     <form id="form_cp_page_profile" action="{{path("cp_page_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
@@ -33,7 +33,7 @@
         {{form_row(form.menuName, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "menu"})}}
         
         <div id="page_rankMenuSort" class="sort_container">
-            <p>{% trans %}pageProfile_6{% endtrans %} <i class="material-icons">list</i></p>
+            <p>{% trans %}pageProfile_6{% endtrans %} <i class="material-icons" style="vertical-align: middle; margin-bottom: 2px;">list</i></p>
             <div class="sort_result">
                 {{response.values.pageSortListHtml|raw}}
             </div>
