--- a/symfony_fw/templates/render/module/menu_root.html.twig
+++ b/symfony_fw/templates/render/module/menu_root.html.twig
@@ -1,166 +1,83 @@
-<div class="navbar_fix">
-    <nav id="menu_root" class="navbar navbar-default">
-        <div class="navbar-header">
-            <div class="navbar_header_content">
-                <button id="menu_root_nav_button" class="navbar-toggle collapsed">
-                    <span class="sr-only">Menu</span>
-                    <span class="icon-bar top-bar"></span>
-                    <span class="icon-bar middle-bar"></span>
-                    <span class="icon-bar bottom-bar"></span>
-                </button>
-            </div>
-            <div class="navbar_header_content">
-                <div class="logo_small display_mobile">
-                    <img class="logo_svg" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/logo.svg")}}"/>
-                    <p class="logo_text">{{websiteName}}</p>
-                </div>
-            </div>
-            <div class="display_inline float_right">
-                {{headerMobile}}
-            </div>
-        </div>
-        <div id="menu_root_navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                {% macro recursiveList(url, pagesList) %}
-                    {% import _self as self %}
-
-                    {% for value in pagesList %}
-                        {% if value.show_in_menu == 1 %}
-                            {% if value.children != null %}
-                                <li class="dropdown">
-                                    <a class="dropdown-toggle" data-toggle="dropdown" href="{{url}}/{{value.id}}">{{value.menu_name}}</a>
-                                    <span></span>
-                                    {% if value.children != "" %}
-                                        <ul class="dropdown-menu dropdown_menu_fix">
-                                            {{self.recursiveList(url, value.children)}}
-                                        </ul>
-                                    {% endif %}
-                                </li>
-                            {% else %}
-                                <li>
-                                    {% if value.only_link == true %}
-                                        <a href="{{value.link}}" target="_blank">{{value.menu_name}}</a>
-                                    {% else %}
-                                        <a href="{{url}}/{{value.id}}">{{value.menu_name}}</a>
-                                        <span></span>
-                                    {% endif %}
-
-                                    {% if value.children != "" %}
-                                        <ul>
-                                            {{self.recursiveList(url, value.children)}}
-                                        </ul>
-                                    {% endif %}
-                                </li>
-                            {% endif %}
-                        {% endif %}
-                    {% endfor %}
-                {% endmacro %}
-
-                {% from _self import recursiveList %}
-
-                {{recursiveList(response.values.url, response.values.pageList)}}
-            </ul>
-        </div>
-    </nav>
-</div>
-
-{% set headerMobile %}
-    {% if (response.values.moduleRows[4]['active'] == true) %}
-        <div class="navbar_header_content navbar_header_icon">
-            <div class="dropdown">
-                <button id="search_button" class="dropdown-toggle button_custom" data-toggle="dropdown">
-                    <i class="fa fa-search fa-lg"></i>
-                </button>
-                <div class="dropdown-menu dropdown-menu-right horizontal_center">
-                    <form id="form_search_module_mobile" class="form_search_module display_inline" action="{{path("search_module", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-                        <div class="button_search">
-                            <i class="fa fa-search"></i>
-                        </div>
-                        <div class="form-group">
-                            <input id="form_search_mobile_words" class="form-control" type="text" name="form_search[words]" required="required" placeholder="Search in the site" autocomplete="off" autocorrect="off" spellcheck="false">
-                        </div>
-                        <input id="form_search_mobile__token" type="hidden" name="form_search[_token]" value="{{csrf_token("intention")}}">
-                    </form>
-                </div>
-            </div>
-        </div>
-    {% endif %}
-    {% if (response.values.moduleRows[3]['active'] == true) %}
-        <div class="navbar_header_content navbar_header_icon">
-            <div class="dropdown">
-                <button id="language_button" class="dropdown-toggle button_custom" data-toggle="dropdown">
-                    <i class="fa fa-globe fa-lg"></i>
-                </button>
-                <div class="dropdown-menu dropdown-menu-right horizontal_center">
-                    <img id="language_flag_mobile_{{app.request.getLocale()}}" class="language_text_flag display_inline" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/lang/" ~ app.request.getLocale() ~ ".png")}}" alt="{{app.request.getLocale()}}.png"/>
-                    <form id="form_language_text_mobile" class="form_language_text display_inline" action="{{path("language_text", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-                        <div class="form-group">
-                            <select id="form_language_mobile_textCode" class="form_language_textCode display_inline form-control" name="form_language[textCode]">
-                                {{response.values.languageSelectOptionHtml|raw}}
-                            </select>
-                        </div>
-                        <input id="form_language_mobile__token" type="hidden" name="form_language[_token]" value="{{csrf_token("intention")}}">
-                    </form>
-                </div>
-            </div>
-        </div>
-    {% endif %}
-    {% if (response.values.moduleRows[1]['active'] == true) %}
-        <div class="navbar_header_content navbar_header_icon">
-            <div class="dropdown">
-                <button id="authentication_button_mobile" class="dropdown-toggle button_custom" data-toggle="dropdown">
-                    <i class="fa fa-user fa-lg"></i>
-                </button>
-                <div class="dropdown-menu dropdown-menu-right">
-                    {% if app.user != null %}
-                        <p class="margin_clear"><b>{% trans %}authentication_1{% endtrans %}</b></p>
-                        <p class="margin_clear">{{response.values.user.username}}</p>
-                        <p class="margin_clear"><b>{% trans %}authentication_2{% endtrans %}</b></p>
-                        <p class="margin_clear">
-                            {% for value in response.values.roleUserRow %}
-                                - {{value|trans}}
-                            {% endfor %}
-                        </p>
-                        <p class="margin_clear"><b>{% trans %}authentication_3{% endtrans %}</b></p>
-                        <p class="margin_clear">{{response.values.dateLastLogin[0]}} [{{response.values.dateLastLogin[1]}}]</p>
-                        <div class="horizontal_center">
-                            <a class="button_custom btn-block" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': "cp_profile"})}}">{% trans %}authentication_4{% endtrans %}</a>
-                            <a class="button_custom btn-block logout_button" href="{{path("authentication_exit_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}">{% trans %}authentication_5{% endtrans %}</a>
-                        </div>
-                    {% else %}
-                        <form id="form_user_authentication_mobile" class="form_user_authentication" action="{{path("authentication_enter_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-                            <div class="form-group">
-                                <label class="control-label required" for="_username">Username</label>
-                                <input id="form_user_authentication_mobile__username" class="form-control" type="text" name="_username" required="required">
-                            </div>
-                            <div class="form-group">
-                                <label class="control-label required" for="_password">Password</label>
-                                <input id="form_user_authentication_mobile__password" class="form-control" type="password" name="_password" required="required">
-                            </div>
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <input class="button_custom" type="submit" value="Login">
-                                    <div class="checkbox remember_me_fix">
-                                        <label for="_remember_me">
-                                            <input type="checkbox" name="_remember_me" value="1"> Remember me
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                            
-                            {{-include("@templateRoot/include/captcha.html.twig")-}}
-                            
-                            <input id="form_user_authentication_mobile__token" type="hidden" name="_token" value="{{csrf_token("intention")}}">
-                        </form>
-                        {% if (settingRow['website_active'] == true) %}
-                            <div class="horizontal_center">
-                                <a class="button_custom btn-block" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 3})}}">{% trans %}authentication_10{% endtrans %}</a>
-                                <a class="button_custom btn-block" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 4})}}">{% trans %}authentication_11{% endtrans %}</a>
+<nav class="menu_root_container">
+    {% import _self as macro %}
+    
+    {% if urlExtra == "desktop" %}
+        <ul>
+            {% for key, value in response.values.pageList %}
+                {% if value.show_in_menu == true %}
+                    <li class="parent">
+                        <a class="target {% if value.children|length > 0 %}target_clean{% endif %}" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': value.id, 'urlExtra': ""})}}">
+                            <span>{{value.menu_name}}</span>
+                            <i class="material-icons" {% if value.children|length == 0 %}style="visibility: hidden; width: 0;"{% endif %}>keyboard_arrow_down</i>
+                        </a>
+                        
+                        {% if value.children|length > 0 %}
+                            <div class="mdc-elevation--z8 parent_content">
+                                {{macro.menuRootChildrenDesktop(urlLocale, value.children)}}
                             </div>
                         {% endif %}
+                    </li>
+                {% endif %}
+            {% endfor %}
+        </ul>
+    {% else %}
+        {% set loopSpace = "" %}
+        
+        {% for key, value in response.values.pageList %}
+            {% if value.show_in_menu == true %}
+                <a class="mdc-list-item {% if value.children|length > 0 %}target_clean{% endif %}" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': value.id, 'urlExtra': ""})}}">
+                    <span>{{value.menu_name}}</span>
+                    <i class="mdc-list-item__graphic material-icons parent_icon" {% if value.children|length == 0 %}style="visibility: hidden; width: 0;"{% endif %}>toc</i>
+                </a>
+                
+                {% if value.children|length > 0 %}
+                    {{macro.menuRootChildrenMobile(loopSpace, urlLocale, value.children)}}
+                {% endif %}
+            {% endif %}
+        {% endfor %}
+    {% endif %}
+</nav>
+
+{% macro menuRootChildrenDesktop(urlLocale, pageList) %}
+    {% import _self as self %}
+
+    <ul class="children_container">
+        {% for key, value in pageList %}
+            {% if value.show_in_menu == true %}
+                <li class="parent">
+                    <a class="target" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': value.id, 'urlExtra': ""})}}">
+                        <span>{{value.menu_name}}</span>
+                        <i class="material-icons" {% if value.children|length == 0 %}style="visibility: hidden; width: 0;"{% endif %}>keyboard_arrow_right</i>
+                    </a>
+                    
+                    {% if value.children|length > 0 %}
+                        <div class="mdc-elevation--z8 parent_content">
+                            {{self.menuRootChildrenDesktop(urlLocale, value.children)}}
+                        </div>
                     {% endif %}
-                </div>
-            </div>
-        </div>
-    {% endif %}
-{% endset %}
+                </li>
+            {% endif %}
+        {% endfor %}
+    </ul>
+{% endmacro %}
+
+{% macro menuRootChildrenMobile(loopSpace, urlLocale, pageList) %}
+    {% import _self as self %}
+    
+    {% set loopSpace = loopSpace ~ "-" %}
+    
+    <div class="children_container">
+        {% for key, value in pageList %}
+            {% if value.show_in_menu == true %}
+                <a class="mdc-list-item {% if value.children|length > 0 %}target_clean{% endif %}" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': value.id, 'urlExtra': ""})}}">
+                    {{loopSpace}}&nbsp;<span>{{value.menu_name}}</span>
+                    <i class="mdc-list-item__graphic material-icons parent_icon" {% if value.children|length == 0 %}style="visibility: hidden; width: 0;"{% endif %}>toc</i>
+                </a>
+
+                {% if value.children|length > 0 %}
+                    {{self.menuRootChildrenMobile(loopSpace, urlLocale, value.children)}}
+                {% endif %}
+            {% endif %}
+        {% endfor %}
+    </div>
+{% endmacro %}
