--- a/symfony_fw/templates/render/control_panel/payment_profile.html.twig
+++ b/symfony_fw/templates/render/control_panel/payment_profile.html.twig
@@ -6,7 +6,7 @@
             <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
             <span class="mdc-list-item__text">
                 {% trans %}paymentProfile_2{% endtrans %}
-                <span class="mdc-list-item__secondary-text">{{response.values.payment.transaction}}</span>
+                <span class="mdc-list-item__secondary-text">{{response.values.payment.id}}</span>
             </span>
         </li>
         <li role="separator" class="mdc-list-divider"></li>
@@ -14,7 +14,7 @@
             <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
             <span class="mdc-list-item__text">
                 {% trans %}paymentProfile_3{% endtrans %}
-                <span class="mdc-list-item__secondary-text">{{response.values.payment.date}}</span>
+                <span class="mdc-list-item__secondary-text">{{response.values.payment.transaction}}</span>
             </span>
         </li>
         <li role="separator" class="mdc-list-divider"></li>
@@ -22,7 +22,7 @@
             <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
             <span class="mdc-list-item__text">
                 {% trans %}paymentProfile_4{% endtrans %}
-                <span class="mdc-list-item__secondary-text">{{response.values.payment.status}}</span>
+                <span class="mdc-list-item__secondary-text">{{response.values.payment.date}}</span>
             </span>
         </li>
         <li role="separator" class="mdc-list-divider"></li>
@@ -30,7 +30,7 @@
             <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
             <span class="mdc-list-item__text">
                 {% trans %}paymentProfile_5{% endtrans %}
-                <span class="mdc-list-item__secondary-text">{{response.values.payment.payer}}</span>
+                <span class="mdc-list-item__secondary-text">{{response.values.payment.status}}</span>
             </span>
         </li>
         <li role="separator" class="mdc-list-divider"></li>
@@ -38,7 +38,7 @@
             <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
             <span class="mdc-list-item__text">
                 {% trans %}paymentProfile_6{% endtrans %}
-                <span class="mdc-list-item__secondary-text">{{response.values.payment.receiver}}</span>
+                <span class="mdc-list-item__secondary-text">{{response.values.payment.payer}}</span>
             </span>
         </li>
         <li role="separator" class="mdc-list-divider"></li>
@@ -46,7 +46,7 @@
             <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
             <span class="mdc-list-item__text">
                 {% trans %}paymentProfile_7{% endtrans %}
-                <span class="mdc-list-item__secondary-text">{{response.values.payment.currencyCode}}</span>
+                <span class="mdc-list-item__secondary-text">{{response.values.payment.receiver}}</span>
             </span>
         </li>
         <li role="separator" class="mdc-list-divider"></li>
@@ -54,7 +54,7 @@
             <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
             <span class="mdc-list-item__text">
                 {% trans %}paymentProfile_8{% endtrans %}
-                <span class="mdc-list-item__secondary-text">{{response.values.payment.itemName}}</span>
+                <span class="mdc-list-item__secondary-text">{{response.values.payment.currencyCode}}</span>
             </span>
         </li>
         <li role="separator" class="mdc-list-divider"></li>
@@ -62,7 +62,7 @@
             <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
             <span class="mdc-list-item__text">
                 {% trans %}paymentProfile_9{% endtrans %}
-                <span class="mdc-list-item__secondary-text">{{response.values.payment.amount}}</span>
+                <span class="mdc-list-item__secondary-text">{{response.values.payment.itemName}}</span>
             </span>
         </li>
         <li role="separator" class="mdc-list-divider"></li>
@@ -70,6 +70,14 @@
             <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
             <span class="mdc-list-item__text">
                 {% trans %}paymentProfile_10{% endtrans %}
+                <span class="mdc-list-item__secondary-text">{{response.values.payment.amount}}</span>
+            </span>
+        </li>
+        <li role="separator" class="mdc-list-divider"></li>
+        <li class="mdc-list-item">
+            <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
+            <span class="mdc-list-item__text">
+                {% trans %}paymentProfile_11{% endtrans %}
                 <span class="mdc-list-item__secondary-text">{{response.values.payment.quantity}}</span>
             </span>
         </li>
