--- a/symfony_fw/templates/render/control_panel/module_creation.html.twig
+++ b/symfony_fw/templates/render/control_panel/module_creation.html.twig
@@ -13,11 +13,11 @@
             </div>
             <div class="sort_control">
                 <button class="mdc-button mdc-button--dense mdc-button--raised" type="button">
-                    <i class="material-icons mdc-button__icon button_up" aria-hidden="true">arrow_drop_up</i>
+                    <i class="material-icons mdc-button__icon button_up">arrow_drop_up</i>
                     {% trans %}moduleCreation_4{% endtrans %}
                 </button>
                 <button class="mdc-button mdc-button--dense mdc-button--raised" type="button">
-                    <i class="material-icons mdc-button__icon button_down" aria-hidden="true">arrow_drop_down</i>
+                    <i class="material-icons mdc-button__icon button_down">arrow_drop_down</i>
                     {% trans %}moduleCreation_5{% endtrans %}
                 </button>
             </div>
