--- a/symfony_fw/templates/render/page_controller_action/include_test.html.twig
+++ b/symfony_fw/templates/render/page_controller_action/include_test.html.twig
@@ -1,4 +1,4 @@
 <div>
-    <p>Include test</p>
+    <p>Include controller test</p>
 </div>
 <script type="text/javascript" src="{{asset("javascript/page_controller_action/IncludeTest.js")}}"></script>
