--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -470,9 +470,14 @@ table {
 
 #body_progress {
     display: block;
-}
-#body_content {
-    opacity: 0;
+    height: 100%;
+    background-color: #ffffff;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 2000;
 }
 
 #panel_id_1 {
