--- a/symfony_fw/templates/include/upload.html.twig
+++ b/symfony_fw/templates/include/upload.html.twig
@@ -5,11 +5,11 @@
     
     <div class="controls">
         <button class="mdc-button mdc-button--dense mdc-button--raised button_start" type="button">
-            <i class="material-icons mdc-button__icon" aria-hidden="true">play_arrow</i>
+            <i class="material-icons mdc-button__icon">play_arrow</i>
             <span>{% trans %}upload_1{% endtrans %}</span>
         </button>
         <button class="mdc-button mdc-button--dense mdc-button--raised button_stop" type="button">
-            <i class="material-icons mdc-button__icon" aria-hidden="true">stop</i>
+            <i class="material-icons mdc-button__icon">stop</i>
             <span>{% trans %}upload_2{% endtrans %}</span>
         </button>
     </div>
