--- a/symfony_fw/templates/render/control_panel/payment_profile.html.twig
+++ b/symfony_fw/templates/render/control_panel/payment_profile.html.twig
@@ -3,7 +3,7 @@
     
     <ul class="mdc-list mdc-list--two-line mdc-list--avatar-list">
         <li class="mdc-list-item">
-            <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
+            <span class="mdc-list-item__graphic material-icons">info</span>
             <span class="mdc-list-item__text">
                 {% trans %}paymentProfile_2{% endtrans %}
                 <span class="mdc-list-item__secondary-text">{{response.values.payment.id}}</span>
@@ -11,7 +11,7 @@
         </li>
         <li role="separator" class="mdc-list-divider"></li>
         <li class="mdc-list-item">
-            <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
+            <span class="mdc-list-item__graphic material-icons">info</span>
             <span class="mdc-list-item__text">
                 {% trans %}paymentProfile_3{% endtrans %}
                 <span class="mdc-list-item__secondary-text">{{response.values.payment.transaction}}</span>
@@ -19,7 +19,7 @@
         </li>
         <li role="separator" class="mdc-list-divider"></li>
         <li class="mdc-list-item">
-            <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
+            <span class="mdc-list-item__graphic material-icons">info</span>
             <span class="mdc-list-item__text">
                 {% trans %}paymentProfile_4{% endtrans %}
                 <span class="mdc-list-item__secondary-text">{{response.values.payment.date}}</span>
@@ -27,7 +27,7 @@
         </li>
         <li role="separator" class="mdc-list-divider"></li>
         <li class="mdc-list-item">
-            <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
+            <span class="mdc-list-item__graphic material-icons">info</span>
             <span class="mdc-list-item__text">
                 {% trans %}paymentProfile_5{% endtrans %}
                 <span class="mdc-list-item__secondary-text">{{response.values.payment.status}}</span>
@@ -35,7 +35,7 @@
         </li>
         <li role="separator" class="mdc-list-divider"></li>
         <li class="mdc-list-item">
-            <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
+            <span class="mdc-list-item__graphic material-icons">info</span>
             <span class="mdc-list-item__text">
                 {% trans %}paymentProfile_6{% endtrans %}
                 <span class="mdc-list-item__secondary-text">{{response.values.payment.payer}}</span>
@@ -43,7 +43,7 @@
         </li>
         <li role="separator" class="mdc-list-divider"></li>
         <li class="mdc-list-item">
-            <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
+            <span class="mdc-list-item__graphic material-icons">info</span>
             <span class="mdc-list-item__text">
                 {% trans %}paymentProfile_7{% endtrans %}
                 <span class="mdc-list-item__secondary-text">{{response.values.payment.receiver}}</span>
@@ -51,7 +51,7 @@
         </li>
         <li role="separator" class="mdc-list-divider"></li>
         <li class="mdc-list-item">
-            <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
+            <span class="mdc-list-item__graphic material-icons">info</span>
             <span class="mdc-list-item__text">
                 {% trans %}paymentProfile_8{% endtrans %}
                 <span class="mdc-list-item__secondary-text">{{response.values.payment.currencyCode}}</span>
@@ -59,7 +59,7 @@
         </li>
         <li role="separator" class="mdc-list-divider"></li>
         <li class="mdc-list-item">
-            <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
+            <span class="mdc-list-item__graphic material-icons">info</span>
             <span class="mdc-list-item__text">
                 {% trans %}paymentProfile_9{% endtrans %}
                 <span class="mdc-list-item__secondary-text">{{response.values.payment.itemName}}</span>
@@ -67,7 +67,7 @@
         </li>
         <li role="separator" class="mdc-list-divider"></li>
         <li class="mdc-list-item">
-            <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
+            <span class="mdc-list-item__graphic material-icons">info</span>
             <span class="mdc-list-item__text">
                 {% trans %}paymentProfile_10{% endtrans %}
                 <span class="mdc-list-item__secondary-text">{{response.values.payment.amount}}</span>
@@ -75,7 +75,7 @@
         </li>
         <li role="separator" class="mdc-list-divider"></li>
         <li class="mdc-list-item">
-            <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
+            <span class="mdc-list-item__graphic material-icons">info</span>
             <span class="mdc-list-item__text">
                 {% trans %}paymentProfile_11{% endtrans %}
                 <span class="mdc-list-item__secondary-text">{{response.values.payment.quantity}}</span>
