--- a/symfony_fw/templates/render/control_panel/setting.html.twig
+++ b/symfony_fw/templates/render/control_panel/setting.html.twig
@@ -84,6 +84,7 @@
             {{form_row(form.loginAttemptTime, {'dense': "", 'styleType': "outlinedTrailing"})}}
             {{form_row(form.loginAttemptCount, {'dense': "", 'styleType': "outlinedTrailing"})}}
             {{form_row(form.captcha)}}
+            {{form_row(form.useType)}}
         </div>
     </fieldset>
     <fieldset class="accordion_container">
