--- a/symfony_fw/templates/render/module/language_text.html.twig
+++ b/symfony_fw/templates/render/module/language_text.html.twig
@@ -2,7 +2,7 @@
     <a href="javascript:void(0)" class="material-icons mdc-top-app-bar__action-item" aria-label="Language" alt="Language">language</a>
     <div class="mdc-menu" tabindex="-1">
         <ul class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
-            {% for value in response.values.languageRows %}
+            {% for key, value in response.values.languageRows %}
                 <li class="mdc-list-item" role="menuitem" {% if value.code == app.request.getLocale() %}tabindex="-1" aria-disabled="true"{% endif %}>
                     <span><img class="{{value.code}}" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/lang/" ~ value.code ~ ".png")}}" alt="{{value.code}}.png"/>{{value.code}}</span>
                 </li>
