--- a/symfony_fw/templates/render/myPage.html.twig
+++ b/symfony_fw/templates/render/myPage.html.twig
@@ -2,11 +2,11 @@
 
 <nav class="mdc-tab-bar mdc-tab-bar--icons-with-text">
     <a class="mdc-tab mdc-tab--with-icon-and-text" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 1, 'urlExtra': "mp_profile"})}}">
-        <i class="material-icons mdc-tab__icon" aria-hidden="true">person</i>
+        <i class="material-icons mdc-tab__icon">person</i>
         <span class="mdc-tab__icon-text">{% trans %}myPage_2{% endtrans %}</span>
     </a>
     <a class="mdc-tab mdc-tab--with-icon-and-text" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 1, 'urlExtra': "mp_payment"})}}">
-        <i class="material-icons mdc-tab__icon" aria-hidden="true">account_balance</i>
+        <i class="material-icons mdc-tab__icon">account_balance</i>
         <span class="mdc-tab__icon-text">{% trans %}myPage_3{% endtrans %}</span>
     </a>
     <span class="mdc-tab-bar__indicator"></span>
