--- a/symfony_fw/templates/render/registration.html.twig
+++ b/symfony_fw/templates/render/registration.html.twig
@@ -5,11 +5,11 @@
     
     <nav class="mdc-tab-bar mdc-tab-bar--icons-with-text">
         <a class="mdc-tab mdc-tab--with-icon-and-text" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': "private"})}}">
-            <i class="material-icons mdc-tab__icon" aria-hidden="true">person</i>
+            <i class="material-icons mdc-tab__icon">person</i>
             <span class="mdc-tab__icon-text">{% trans %}registration_1{% endtrans %}</span>
         </a>
         <a class="mdc-tab mdc-tab--with-icon-and-text" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': "company"})}}">
-            <i class="material-icons mdc-tab__icon" aria-hidden="true">account_balance</i>
+            <i class="material-icons mdc-tab__icon">account_balance</i>
             <span class="mdc-tab__icon-text">{% trans %}registration_2{% endtrans %}</span>
         </a>
         <span class="mdc-tab-bar__indicator"></span>
